# document_extractor

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_queue.py
app/: config.py  database.py  main.py  models.py  queue.py  redis_queue.py  schema.py
app/router/: export.py  status.py  upload.py
app/service/: excel_service.py  export_service.py  extractor_service.py  file_detector.py  image_service.py  ocr_service.py  pdf_service.py  persistence_service.py  processor.py
app/utils/: logger.py
app/worker/: document_job.py  worker.py
