[project]
name = "document-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pyodbc>=5.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "redis>=8.0.0",
    "rq>=2.9.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "xlsxwriter>=3.2.9",
]
